--- a/module_2_read_data.rmd
+++ b/module_2_read_data.rmd
@@ -31,156 +31,6 @@ d_in$Assessment <- as.numeric(d_in$Assessment)
 d_in$Admin <- as.numeric(d_in$Admin)
 d_in$Workload <- as.numeric(d_in$Workload)
 d_in$Equality <- as.numeric(d_in$Equality)
-```
 
-# Define model
-```{r}
-dlist <- list(
-      Size_s = standardize(d_in$Survey_population),
-      Returned_s = standardize(d_in$Survey_returned),
-      Swedish = d_in$Swedish,
-      CS = d_in$CS,
-      SP = d_in$study_period,
-      Overall_s = standardize(d_in$Overall),
-      Prereq_s = standardize(d_in$Prerequisites),
-      LearningOut_s = standardize(d_in$LearningOutcome),
-      Structure_s = standardize(d_in$CourseStruc),
-      Teaching_s = standardize(d_in$Teaching),
-      Literature_s = standardize(d_in$Literature),
-      Assessment_s = standardize(d_in$Assessment),
-      Admin_s = standardize(d_in$Admin),
-      Workload_s = standardize(d_in$Workload),
-      Equality_s = standardize(d_in$Equality)
-)
-
-# Causal Salad Model
-model_m1 <- ulam(log_lik=TRUE,
-      alist(
-      Overall_s ~ dnorm(mu, sigma),
-      mu <- a_1[Swedish] + a_3[SP] + b_size * Size_s + b_ret * Returned_s + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_w * Workload_s + b_e * Equality_s,
-      a_1[Swedish] ~ dnorm(0, 1),
-      #a_2[CS] ~ dnorm(0, 1),
-      a_3[SP] ~ dnorm(0, 1),
-      b_size ~ dnorm(0, 1),
-      b_ret ~ dnorm(0, 1),
-      b_p ~ dnorm(0, 1),
-      b_l ~ dnorm(0, 1),
-      b_s ~ dnorm(0, 1),
-      b_t ~ dnorm(0, 1),
-      b_li ~ dnorm(0, 1),
-      b_a ~ dnorm(0, 1),
-      b_ad ~ dnorm(0, 1),
-      b_w ~ dnorm(0, 1),
-      b_e ~ dnorm(0, 1),
-      sigma ~ dexp(1)
-      ), data = dlist, chains = 2, cores = 2
-)
-```
-
-```{r}
-dlist <- list(
-      Overall_s = standardize(d_in$Overall),
-      Size_s = standardize(d_in$Survey_population),
-      Returned_s = standardize(d_in$Survey_returned),
-      Teaching_s = standardize(d_in$Teaching),
-      Assessment_s = standardize(d_in$Assessment),
-      Workload_s = standardize(d_in$Workload)
-)
-# Simplified Causal Salad Model
-model_m1_simple <- ulam(log_lik=TRUE,
-      alist(
-      Overall_s ~ dnorm(mu, sigma),
-      mu <- a + b_size * Size_s + b_ret * Returned_s + b_t * Teaching_s + b_a * Assessment_s + b_w * Workload_s,
-      a ~ dnorm(0, 1),
-      b_size ~ dnorm(0, 1),
-      b_ret ~ dnorm(0, 1),
-      b_t ~ dnorm(0, 1),
-      b_a ~ dnorm(0, 1),
-      b_w ~ dnorm(0, 1),
-      sigma ~ dexp(1)
-      ), data = dlist, chains = 2, cores = 2
-
-)
-```
-
-```{r}
-
-dlist <- list(
-      Size = standardize(d_in$Survey_population),
-      Returned_s = standardize(d_in$Survey_returned),
-      Swedish = d_in$Swedish,
-      Overall_s = standardize(d_in$Overall),
-      Prereq_s = standardize(d_in$Prerequisites),
-      LearningOut_s = standardize(d_in$LearningOutcome),
-      Structure_s = standardize(d_in$CourseStruc),
-      Teaching_s = standardize(d_in$Teaching),
-      Literature_s = standardize(d_in$Literature),
-      Assessment_s = standardize(d_in$Assessment),
-      Admin_s = standardize(d_in$Admin),
-      Workload_s = standardize(d_in$Workload),
-      Equality_s = standardize(d_in$Equality)
-)
-
-# Assocations with number of returned questions
-model_m2 <- ulam(log_lik=TRUE,
-      alist(
-      Returned_s ~ dnorm(mu, sigma),
-      mu <- a[Swedish]  + b_size * Size + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_w * Workload_s + b_e * Equality_s,
-      a[Swedish] ~ dnorm(0, 1),
-      b_size ~ dnorm(0, 1),
-      b_p ~ dnorm(0, 1),
-      b_l ~ dnorm(0, 1),
-      b_s ~ dnorm(0, 1),
-      b_t ~ dnorm(0, 1),
-      b_li ~ dnorm(0, 1),
-      b_a ~ dnorm(0, 1),
-      b_ad ~ dnorm(0, 1),
-      b_w ~ dnorm(0, 1),
-      b_e ~ dnorm(0, 1),
-      sigma ~ dexp(1)
-      ), data = dlist, chains = 2, cores = 2
-
-)
-```
-
-```{r}
-dlist <- list(
-      Overall_s = standardize(d_in$Overall),
-      Size_s = standardize(d_in$Survey_population),
-      Returned_s = standardize(d_in$Survey_returned),
-      Teaching_s = standardize(d_in$Teaching),
-      Assessment_s = standardize(d_in$Assessment),
-      Workload_s = standardize(d_in$Workload)
-)
-# Simplified Causal Salad Model Quap
-model_m1_simple_quap <- quap(
-      alist(
-      Overall_s ~ dnorm(mu, sigma),
-      mu <- a + b_size * Size_s + b_ret * Returned_s + b_t * Teaching_s + b_a * Assessment_s + b_w * Workload_s,
-      a ~ dnorm(0, 1),
-      b_size ~ dnorm(0, 1),
-      b_ret ~ dnorm(0, 1),
-      b_t ~ dnorm(0, 1),
-      b_a ~ dnorm(0, 1),
-      b_w ~ dnorm(0, 1),
-      sigma ~ dexp(1)
-      ), data = dlist
-
-)
-
-model_m1_verysimple_quap <- quap(
-      alist(
-      Overall_s ~ dnorm(mu, sigma),
-      mu <- a + b_size * Size_s + b_t * Teaching_s,
-      a ~ dnorm(0, 1),
-      b_size ~ dnorm(0, 1),
-      b_t ~ dnorm(0, 1),
-      sigma ~ dexp(1)
-      ), data = dlist
-
-)
-```
-
-```{r}
-coeftab(model_m1_simple_quap, model_m1_verysimple_quap)
+save(d_in, file = "./data/data_r_in_num")
 ```
