added model for RQ1

--- a/module_1_data_intake.ipynb
+++ b/module_1_data_intake.ipynb
@@ -168,7 +168,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "mercury",
    "language": "python",
    "name": "python3"
   },
