--- a/module_3_models.rmd
+++ b/module_3_models.rmd
@@ -1,78 +1,51 @@
 # Load libraries
 ```{r}
 library(dplyr)
+library(corrplot)
+library(ggplot2)
+library(svglite)
 library(rethinking)
 ```
 
 # Load data
 ```{r}
-load("./data/data_r_in.RData")
+load("./data/data_r_in_num.RData")
 ```
 
-# Define model
+# Exploring correlations in data
 ```{r}
 dlist <- list(
-      Size_s = standardize(d_in$Survey_population),
-      Returned_s = standardize(d_in$Survey_returned),
-      Swedish = d_in$Swedish,
-      CS = d_in$CS,
-      SP = d_in$study_period,
-      Overall_s = standardize(d_in$Overall),
-      Prereq_s = standardize(d_in$Prerequisites),
-      LearningOut_s = standardize(d_in$LearningOutcome),
-      Structure_s = standardize(d_in$CourseStruc),
-      Teaching_s = standardize(d_in$Teaching),
-      Literature_s = standardize(d_in$Literature),
-      Assessment_s = standardize(d_in$Assessment),
-      Admin_s = standardize(d_in$Admin),
-      Workload_s = standardize(d_in$Workload),
-      Equality_s = standardize(d_in$Equality)
+      
+      Size = as.integer(d_in$Survey_population),
+      Swedish = as.integer(d_in$Swedish),
+      Overall_s = standardize(as.numeric(d_in$Overall)),
+      Prereq_s = standardize(as.numeric(d_in$Prerequisites)),
+      LearningOut_s = standardize(as.numeric(d_in$LearningOutcome)),
+      Structure_s = standardize(as.numeric(d_in$CourseStruc)),
+      Teaching_s = standardize(as.numeric(d_in$Teaching)),
+      Literature_s = standardize(as.numeric(d_in$Literature)),
+      Assessment_s = standardize(as.numeric(d_in$Assessment)),
+      Admin_s = standardize(as.numeric(d_in$Admin)),
+      Workload_s = standardize(as.numeric(d_in$Workload)),
+      Equality_s = standardize(as.numeric(d_in$Equality))
 )
+```
 
-# Causal Salad Model
+```{r}
 model_m1 <- ulam(log_lik=TRUE,
       alist(
       Overall_s ~ dnorm(mu, sigma),
-      mu <- a_swe[Swedish] + a_sp[SP] + b_size * Size_s + b_ret * Returned_s + b_pre * Prereq_s + b_learn * LearningOut_s + b_struc * Structure_s + b_teach * Teaching_s + b_lit * Literature_s + b_ass * Assessment_s + b_admin * Admin_s + b_work * Workload_s + b_equal * Equality_s,
-      a_swe[Swedish] ~ dnorm(0, 1),
-      # a_cs[CS] ~ dnorm(0, 1),
-      a_sp[SP] ~ dnorm(0, 1),
-      b_size ~ dnorm(0, 1),
-      b_ret ~ dnorm(0, 1),
-      b_pre ~ dnorm(0, 1),
-      b_learn ~ dnorm(0, 1),
-      b_struc ~ dnorm(0, 1),
-      b_teach ~ dnorm(0, 1),
-      b_lit ~ dnorm(0, 1),
-      b_ass ~ dnorm(0, 1),
-      b_admin ~ dnorm(0, 1),
-      b_work ~ dnorm(0, 1),
-      b_equal ~ dnorm(0, 1),
-      sigma ~ dexp(1)
-      ), data = dlist, chains = 2, cores = 2
-)
-```
-
-```{r}
-dlist <- list(
-      Overall_s = standardize(d_in$Overall),
-      Size_s = standardize(d_in$Survey_population),
-      Returned_s = standardize(d_in$Survey_returned),
-      Teaching_s = standardize(d_in$Teaching),
-      Assessment_s = standardize(d_in$Assessment),
-      Workload_s = standardize(d_in$Workload)
-)
-# Simplified Causal Salad Model
-model_m1_simple <- ulam(log_lik=TRUE,
-      alist(
-      Overall_s ~ dnorm(mu, sigma),
-      mu <- a + b_size * Size_s + b_ret * Returned_s + b_t * Teaching_s + b_a * Assessment_s + b_w * Workload_s,
-      a ~ dnorm(0, 1),
-      b_size ~ dnorm(0, 1),
-      b_ret ~ dnorm(0, 1),
+      mu <- a[Swedish] + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_w * Workload_s + b_e * Equality_s,
+      a[Swedish] ~ dnorm(0, 1),
+      b_p ~ dnorm(0, 1),
+      b_l ~ dnorm(0, 1),
+      b_s ~ dnorm(0, 1),
       b_t ~ dnorm(0, 1),
+      b_li ~ dnorm(0, 1),
       b_a ~ dnorm(0, 1),
+      b_ad ~ dnorm(0, 1),
       b_w ~ dnorm(0, 1),
+      b_e ~ dnorm(0, 1),
       sigma ~ dexp(1)
       ), data = dlist, chains = 2, cores = 2
 
@@ -80,129 +53,107 @@ model_m1_simple <- ulam(log_lik=TRUE,
 ```
 
 ```{r}
-
-dlist <- list(
-      Size = standardize(d_in$Survey_population),
-      Returned_s = standardize(d_in$Survey_returned),
-      Swedish = d_in$Swedish,
-      SP = d_in$study_period,
-      Overall_s = standardize(d_in$Overall),
-      Prereq_s = standardize(d_in$Prerequisites),
-      LearningOut_s = standardize(d_in$LearningOutcome),
-      Structure_s = standardize(d_in$CourseStruc),
-      Teaching_s = standardize(d_in$Teaching),
-      Literature_s = standardize(d_in$Literature),
-      Assessment_s = standardize(d_in$Assessment),
-      Admin_s = standardize(d_in$Admin),
-      Workload_s = standardize(d_in$Workload),
-      Equality_s = standardize(d_in$Equality)
-)
-
-# Assocations with number of returned questions
-model_m2 <- ulam(log_lik=TRUE,
+model_mrq1a <- ulam(log_lik=TRUE,
       alist(
-      Returned_s ~ dnorm(mu, sigma),
-      mu <- a_se[Swedish] + a_sp[SP] + b_size * Size + b_pre * Prereq_s + b_learn * LearningOut_s + b_struc * Structure_s + b_teach * Teaching_s + b_lit * Literature_s + b_ass * Assessment_s + b_admin * Admin_s + b_work * Workload_s + b_equal * Equality_s,
-      a_se[Swedish] ~ dnorm(0, 1),
-      a_sp[SP] ~ dnorm(0, 1),
-      b_size ~ dnorm(0, 1),
-      b_pre ~ dnorm(0, 1),
-      b_learn ~ dnorm(0, 1),
-      b_struc ~ dnorm(0, 1),
-      b_teach ~ dnorm(0, 1),
-      b_lit ~ dnorm(0, 1),
-      b_ass ~ dnorm(0, 1),
-      b_admin ~ dnorm(0, 1),
-      b_work ~ dnorm(0, 1),
-      b_equal ~ dnorm(0, 1),
-      sigma ~ dexp(1)
-      ), data = dlist, chains = 2, cores = 2
-
-)
-```
-
-```{r}
-dlist <- list(
-      Overall_s = standardize(d_in$Overall),
-      Size_s = standardize(d_in$Survey_population),
-      Returned_s = standardize(d_in$Survey_returned),
-      Teaching_s = standardize(d_in$Teaching),
-      Assessment_s = standardize(d_in$Assessment),
-      Workload_s = standardize(d_in$Workload)
-)
-# Simplified Causal Salad Model Quap
-model_m1_simple_quap <- quap(
-      alist(
-      Overall_s ~ dnorm(mu, sigma),
-      mu <- a + b_size * Size_s + b_ret * Returned_s + b_t * Teaching_s + b_a * Assessment_s + b_w * Workload_s,
-      a ~ dnorm(0, 1),
-      b_size ~ dnorm(0, 1),
-      b_ret ~ dnorm(0, 1),
+      Workload_s ~ dnorm(mu, sigma),
+      mu <- a_0 + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_e * Equality_s,
+      a_0 ~ dnorm(0, 1),
+      b_p ~ dnorm(0, 1),
+      b_l ~ dnorm(0, 1),
+      b_s ~ dnorm(0, 1),
       b_t ~ dnorm(0, 1),
+      b_li ~ dnorm(0, 1),
       b_a ~ dnorm(0, 1),
-      b_w ~ dnorm(0, 1),
-      sigma ~ dexp(1)
-      ), data = dlist
-
-)
-
-model_m1_verysimple_quap <- quap(
-      alist(
-      Overall_s ~ dnorm(mu, sigma),
-      mu <- a + b_size * Size_s + b_t * Teaching_s,
-      a ~ dnorm(0, 1),
-      b_size ~ dnorm(0, 1),
-      b_t ~ dnorm(0, 1),
-      sigma ~ dexp(1)
-      ), data = dlist
-
-)
-```
-
-```{r}
-coeftab(model_m1_simple_quap, model_m1_verysimple_quap)
-```
-
-```{r}
-
-dlist <- list(
-      Size = standardize(d_in$Survey_population),
-      Returned_s = standardize(d_in$Survey_returned),
-      Swedish = d_in$Swedish,
-      SP = d_in$study_period,
-      Overall_s = standardize(d_in$Overall),
-      Prereq_s = standardize(d_in$Prerequisites),
-      LearningOut_s = standardize(d_in$LearningOutcome),
-      Structure_s = standardize(d_in$CourseStruc),
-      Teaching_s = standardize(d_in$Teaching),
-      Literature_s = standardize(d_in$Literature),
-      Assessment_s = standardize(d_in$Assessment),
-      Admin_s = standardize(d_in$Admin),
-      Workload_s = standardize(d_in$Workload),
-      Equality_s = standardize(d_in$Equality)
-)
-
-# Assocations with number of returned questions
-model_m3 <- ulam(log_lik=TRUE,
-      alist(
-      Teaching_s ~ dnorm(mu, sigma),
-      mu <- a_se[Swedish] + a_sp[SP] + b_size * Size + b_pre * Prereq_s + b_ret * Returned_s + b_learn * LearningOut_s + b_struc * Structure_s + b_lit * Literature_s + b_ass * Assessment_s + b_admin * Admin_s + b_work * Workload_s + b_equal * Equality_s,
-      a ~ dnorm(0,1),
-      a_se[Swedish] ~ dnorm(0, 1),
-      a_sp[SP] ~ dnorm(0, 1),
-      b_size ~ dnorm(0, 1),
-      b_ret ~ dnorm(0, 1),
-      b_pre ~ dnorm(0, 1),
-      b_learn ~ dnorm(0, 1),
-      b_struc ~ dnorm(0, 1),
-      b_teach ~ dnorm(0, 1),
-      b_lit ~ dnorm(0, 1),
-      b_ass ~ dnorm(0, 1),
-      b_admin ~ dnorm(0, 1),
-      b_work ~ dnorm(0, 1),
-      b_equal ~ dnorm(0, 1),
+      b_ad ~ dnorm(0, 1),
+      b_e ~ dnorm(0, 1),
       sigma ~ dexp(1)
       ), data = dlist, chains = 2, cores = 2
 
 )
+```
+
+```{r}
+model_mrq1b <- ulam(log_lik=TRUE,
+      alist(
+      Workload_s ~ dnorm(mu, sigma),
+      mu <- a_0 + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_e * Equality_s,
+      a_0 ~ dnorm(0, 1),
+      b_p ~ dnorm(0, 1),
+      b_l ~ dnorm(0, 1),
+      b_s ~ dnorm(0, 1),
+      b_t ~ dnorm(0, 1),
+      b_li ~ dnorm(0, 1),
+      b_a ~ dnorm(0, 1),
+      b_ad ~ dnorm(0, 1),
+      b_e ~ dnorm(0, 1),
+      sigma ~ dexp(1),
+
+      # Quality of Teaching influenced by other teaching related factors
+      Teaching_s ~ dnorm(nu, tau),
+      nu <- a_T + b_l_t * LearningOut_s + b_s_t * Structure_s + b_li_t * Literature_s + b_a_t * Assessment_s + b_ad_t * Admin_s + b_e_t * Equality_s,
+      a_T ~ dnorm(0, 1),
+      b_l_t ~ dnorm(0, 1),
+      b_s_t ~ dnorm(0, 1),
+      b_li_t ~ dnorm(0, 1),
+      b_a_t ~ dnorm(0, 1),
+      b_ad_t ~ dnorm(0, 1),
+      b_e_t ~ dnorm(0, 1),
+      tau ~ dexp(1)
+      ), data = dlist, chains = 2, cores = 2
+
+)
+```
+
+```{r}
+model_mrq1c <- ulam(log_lik=TRUE,
+      alist(
+      Workload_s ~ dnorm(mu, sigma),
+      mu <- a_0 + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_e * Equality_s + b_o * Overall_s,
+      a_0 ~ dnorm(0, 1),
+      b_p ~ dnorm(0, 1),
+      b_l ~ dnorm(0, 1),
+      b_s ~ dnorm(0, 1),
+      b_t ~ dnorm(0, 1),
+      b_li ~ dnorm(0, 1),
+      b_a ~ dnorm(0, 1),
+      b_ad ~ dnorm(0, 1),
+      b_e ~ dnorm(0, 1),
+      b_o ~ dnorm(0, 1),
+      sigma ~ dexp(1),
+
+      # Overall impression is related to everything
+      Overall_s ~ dnorm(nu, tau),
+      nu <- a_o + b_p_o * Prereq_s + b_l_o * LearningOut_s + b_s_o * Structure_s + b_t_o * Teaching_s + b_li_o * Literature_s + b_a_o * Assessment_s + b_ad_o * Admin_s + b_e_o * Equality_s,
+      a_o ~ dnorm(0, 1),
+      b_p_o ~ dnorm(0, 1),
+      b_l_o ~ dnorm(0, 1),
+      b_s_o ~ dnorm(0, 1),
+      b_t_o ~ dnorm(0, 1),
+      b_li_o ~ dnorm(0, 1),
+      b_a_o ~ dnorm(0, 1),
+      b_ad_o ~ dnorm(0, 1),
+      b_e_o ~ dnorm(0, 1),
+      tau ~ dexp(1)
+      ), data = dlist, chains = 2, cores = 2
+
+)
+```
+
+## Saving the models so we do not have to re-run them all the time.
+```{r}
+save(model_mrq1a, model_mrq1b, model_mrq1c, file = "./data/model_real_out.RDATA")
+
+precis(model_mrq1a, prob=0.9, digits = 3)
+precis(model_mrq1b, prob=0.9, digits = 3)
+precis(model_mrq1c, prob=0.9, digits = 3)
+
+windows();
+compare(model_mrq1a, model_mrq1b, model_mrq1c)
+
+## Exporting the data from the models for plotting in seaborn
+data_mrq1a <- extract.samples(model_mrq1a)
+data_mrq1b <- extract.samples(model_mrq1b)
+data_mrq1c <- extract.samples(model_mrq1c)
+
+save(data_mrq1a, data_mrq1b, data_mrq1c, file = "./data/modeldata_real_out.RData")
 ```
