forgot to save...

--- a/module_1_data_intake.ipynb
+++ b/module_1_data_intake.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -97,13 +97,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\marti\\.conda\\envs\\mercury\\lib\\site-packages\\rpy2\\robjects\\pandas2ri.py:17: FutureWarning: pandas.core.index is deprecated and will be removed in a future version.  The public classes are available in the top-level namespace.\n",
+      "  from pandas.core.index import Index as PandasIndex\n",
       "c:\\Users\\marti\\.conda\\envs\\mercury\\lib\\site-packages\\rpy2\\robjects\\pandas2ri.py:67: UserWarning: Error while trying to convert the column \"Course\". Fall back to string conversion. The error is: Conversion 'py2ri' not defined for objects of type '<class 'pandas.core.series.Series'>'\n",
       "  (name, str(e)))\n",
       "c:\\Users\\marti\\.conda\\envs\\mercury\\lib\\site-packages\\rpy2\\robjects\\pandas2ri.py:67: UserWarning: Error while trying to convert the column \"Survey_returned\". Fall back to string conversion. The error is: Conversion 'py2ri' not defined for objects of type '<class 'pandas.core.series.Series'>'\n",
@@ -148,7 +150,7 @@
        "rpy2.rinterface.NULL"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.7.16"
   }
  },
  "nbformat": 4,
