--- a/module_3_models.rmd
+++ b/module_3_models.rmd
@@ -27,7 +27,8 @@ dlist <- list(
       Assessment_s = standardize(as.numeric(d_in$Assessment)),
       Admin_s = standardize(as.numeric(d_in$Admin)),
       Workload_s = standardize(as.numeric(d_in$Workload)),
-      Equality_s = standardize(as.numeric(d_in$Equality))
+      Equality_s = standardize(as.numeric(d_in$Equality)),
+      Equality_bin = as.integer(d_in$InEquality_bin)
 )
 ```
 
@@ -53,10 +54,31 @@ model_m1 <- ulam(log_lik=TRUE,
 ```
 
 ```{r}
+model_m1_eq <- ulam(log_lik=TRUE,
+      alist(
+      Overall_s ~ dnorm(mu, sigma),
+      mu <- a[Swedish] + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_w * Workload_s + b_e[Equality_bin],
+      a[Swedish] ~ dnorm(0, 1),
+      b_p ~ dnorm(0, 1),
+      b_l ~ dnorm(0, 1),
+      b_s ~ dnorm(0, 1),
+      b_t ~ dnorm(0, 1),
+      b_li ~ dnorm(0, 1),
+      b_a ~ dnorm(0, 1),
+      b_ad ~ dnorm(0, 1),
+      b_w ~ dnorm(0, 1),
+      b_e[Equality_bin] ~ dnorm(0, 1),
+      sigma ~ dexp(1)
+      ), data = dlist, chains = 2, cores = 2
+
+)
+```
+
+```{r}
 model_mrq1a <- ulam(log_lik=TRUE,
       alist(
       Workload_s ~ dnorm(mu, sigma),
-      mu <- a_0 + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_e * Equality_s,
+      mu <- a_0 + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_e[Equality_bin],
       a_0 ~ dnorm(0, 1),
       b_p ~ dnorm(0, 1),
       b_l ~ dnorm(0, 1),
@@ -65,7 +87,7 @@ model_mrq1a <- ulam(log_lik=TRUE,
       b_li ~ dnorm(0, 1),
       b_a ~ dnorm(0, 1),
       b_ad ~ dnorm(0, 1),
-      b_e ~ dnorm(0, 1),
+      b_e[Equality_bin] ~ dnorm(0, 1),
       sigma ~ dexp(1)
       ), data = dlist, chains = 2, cores = 2
 
@@ -76,7 +98,7 @@ model_mrq1a <- ulam(log_lik=TRUE,
 model_mrq1b <- ulam(log_lik=TRUE,
       alist(
       Workload_s ~ dnorm(mu, sigma),
-      mu <- a_0 + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_e * Equality_s,
+      mu <- a_0 + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_o * Overall_s + b_e[Equality_bin],
       a_0 ~ dnorm(0, 1),
       b_p ~ dnorm(0, 1),
       b_l ~ dnorm(0, 1),
@@ -85,45 +107,13 @@ model_mrq1b <- ulam(log_lik=TRUE,
       b_li ~ dnorm(0, 1),
       b_a ~ dnorm(0, 1),
       b_ad ~ dnorm(0, 1),
-      b_e ~ dnorm(0, 1),
-      sigma ~ dexp(1),
-
-      # Quality of Teaching influenced by other teaching related factors
-      Teaching_s ~ dnorm(nu, tau),
-      nu <- a_T + b_l_t * LearningOut_s + b_s_t * Structure_s + b_li_t * Literature_s + b_a_t * Assessment_s + b_ad_t * Admin_s + b_e_t * Equality_s,
-      a_T ~ dnorm(0, 1),
-      b_l_t ~ dnorm(0, 1),
-      b_s_t ~ dnorm(0, 1),
-      b_li_t ~ dnorm(0, 1),
-      b_a_t ~ dnorm(0, 1),
-      b_ad_t ~ dnorm(0, 1),
-      b_e_t ~ dnorm(0, 1),
-      tau ~ dexp(1)
-      ), data = dlist, chains = 2, cores = 2
-
-)
-```
-
-```{r}
-model_mrq1c <- ulam(log_lik=TRUE,
-      alist(
-      Workload_s ~ dnorm(mu, sigma),
-      mu <- a_0 + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_e * Equality_s + b_o * Overall_s,
-      a_0 ~ dnorm(0, 1),
-      b_p ~ dnorm(0, 1),
-      b_l ~ dnorm(0, 1),
-      b_s ~ dnorm(0, 1),
-      b_t ~ dnorm(0, 1),
-      b_li ~ dnorm(0, 1),
-      b_a ~ dnorm(0, 1),
-      b_ad ~ dnorm(0, 1),
-      b_e ~ dnorm(0, 1),
       b_o ~ dnorm(0, 1),
+      b_e[Equality_bin] ~ dnorm(0, 1),
       sigma ~ dexp(1),
 
       # Overall impression is related to everything
       Overall_s ~ dnorm(nu, tau),
-      nu <- a_o + b_p_o * Prereq_s + b_l_o * LearningOut_s + b_s_o * Structure_s + b_t_o * Teaching_s + b_li_o * Literature_s + b_a_o * Assessment_s + b_ad_o * Admin_s + b_e_o * Equality_s,
+      nu <- a_o + b_p_o * Prereq_s + b_l_o * LearningOut_s + b_s_o * Structure_s + b_t_o * Teaching_s + b_li_o * Literature_s + b_a_o * Assessment_s + b_ad_o * Admin_s +  b_e_o[Equality_bin],
       a_o ~ dnorm(0, 1),
       b_p_o ~ dnorm(0, 1),
       b_l_o ~ dnorm(0, 1),
@@ -132,7 +122,7 @@ model_mrq1c <- ulam(log_lik=TRUE,
       b_li_o ~ dnorm(0, 1),
       b_a_o ~ dnorm(0, 1),
       b_ad_o ~ dnorm(0, 1),
-      b_e_o ~ dnorm(0, 1),
+      b_e_o[Equality_bin] ~ dnorm(0, 1),
       tau ~ dexp(1)
       ), data = dlist, chains = 2, cores = 2
 
@@ -141,19 +131,18 @@ model_mrq1c <- ulam(log_lik=TRUE,
 
 ## Saving the models so we do not have to re-run them all the time.
 ```{r}
-save(model_mrq1a, model_mrq1b, model_mrq1c, file = "./data/model_real_out.RDATA")
-
 precis(model_mrq1a, prob=0.9, digits = 3)
 precis(model_mrq1b, prob=0.9, digits = 3)
-precis(model_mrq1c, prob=0.9, digits = 3)
 
-windows();
-compare(model_mrq1a, model_mrq1b, model_mrq1c)
+compare(model_mrq1a, model_mrq1b)
+
+save(model_m1, model_m1_eq, model_mrq1a, model_mrq1b, file = "./data/model_real_out.RData")
 
 ## Exporting the data from the models for plotting in seaborn
+data_m1 <- extract.samples(model_m1)
+data_m1_eq <- extract.samples(model_m1_eq)
 data_mrq1a <- extract.samples(model_mrq1a)
 data_mrq1b <- extract.samples(model_mrq1b)
-data_mrq1c <- extract.samples(model_mrq1c)
 
-save(data_mrq1a, data_mrq1b, data_mrq1c, file = "./data/modeldata_real_out.RData")
+save(data_m1, data_m1_eq, data_mrq1a, data_mrq1b, file = "./data/modeldata_real_out.RData")
 ```
