--- a/module_3_models.rmd
+++ b/module_3_models.rmd
@@ -54,10 +54,29 @@ model_m1 <- ulam(log_lik=TRUE,
 ```
 
 ```{r}
-model_m1_eq <- ulam(log_lik=TRUE,
+model_mequality_new <- ulam(log_lik=TRUE,
       alist(
-      Overall_s ~ dnorm(mu, sigma),
-      mu <- a[Swedish] + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_w * Workload_s + b_e[Equality_bin],
+      Equality_s ~ dnorm(mu, sigma),
+      mu <- a[Swedish] + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_w * Workload_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s,
+      a[Swedish] ~ dnorm(0, 1),
+      b_p ~ dnorm(0, 1),
+      b_l ~ dnorm(0, 1),
+      b_s ~ dnorm(0, 1),
+      b_t ~ dnorm(0, 1),
+      b_w ~ dnorm(0, 1),
+      b_li ~ dnorm(0, 1),
+      b_a ~ dnorm(0, 1),
+      b_ad ~ dnorm(0, 1),
+      sigma ~ dexp(1)
+      ), data = dlist, chains = 2, cores = 2
+)
+```
+
+```{r}
+model_mwork <- ulam(log_lik=TRUE,
+      alist(
+      Workload_s ~ dnorm(mu, sigma),
+      mu <- a[Swedish] + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_e * Equality_s,
       a[Swedish] ~ dnorm(0, 1),
       b_p ~ dnorm(0, 1),
       b_l ~ dnorm(0, 1),
@@ -66,101 +85,27 @@ model_m1_eq <- ulam(log_lik=TRUE,
       b_li ~ dnorm(0, 1),
       b_a ~ dnorm(0, 1),
       b_ad ~ dnorm(0, 1),
+      b_e ~ dnorm(0, 1),
+      sigma ~ dexp(1)
+      ), data = dlist, chains = 2, cores = 2
+
+)
+```
+
+```{r}
+model_mteach <- ulam(log_lik=TRUE,
+      alist(
+      Teaching_s ~ dnorm(mu, sigma),
+      mu <- a[Swedish] + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_w * Workload_s + b_e * Equality_s,
+      a[Swedish] ~ dnorm(0, 1),
+      b_p ~ dnorm(0, 1),
+      b_l ~ dnorm(0, 1),
+      b_s ~ dnorm(0, 1),
+      b_li ~ dnorm(0, 1),
+      b_a ~ dnorm(0, 1),
+      b_ad ~ dnorm(0, 1),
       b_w ~ dnorm(0, 1),
-      b_e[Equality_bin] ~ dnorm(0, 1),
-      sigma ~ dexp(1)
-      ), data = dlist, chains = 2, cores = 2
-
-)
-```
-
-```{r}
-model_mrq1a <- ulam(log_lik=TRUE,
-      alist(
-      Workload_s ~ dnorm(mu, sigma),
-      mu <- a_0 + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_e[Equality_bin],
-      a_0 ~ dnorm(0, 1),
-      b_p ~ dnorm(0, 1),
-      b_l ~ dnorm(0, 1),
-      b_s ~ dnorm(0, 1),
-      b_t ~ dnorm(0, 1),
-      b_li ~ dnorm(0, 1),
-      b_a ~ dnorm(0, 1),
-      b_ad ~ dnorm(0, 1),
-      b_e[Equality_bin] ~ dnorm(0, 1),
-      sigma ~ dexp(1)
-      ), data = dlist, chains = 2, cores = 2
-
-)
-```
-
-```{r}
-model_mrq1b <- ulam(log_lik=TRUE,
-      alist(
-      Workload_s ~ dnorm(mu, sigma),
-      mu <- a_0 + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_o * Overall_s + b_e[Equality_bin],
-      a_0 ~ dnorm(0, 1),
-      b_p ~ dnorm(0, 1),
-      b_l ~ dnorm(0, 1),
-      b_s ~ dnorm(0, 1),
-      b_t ~ dnorm(0, 1),
-      b_li ~ dnorm(0, 1),
-      b_a ~ dnorm(0, 1),
-      b_ad ~ dnorm(0, 1),
-      b_o ~ dnorm(0, 1),
-      b_e[Equality_bin] ~ dnorm(0, 1),
-      sigma ~ dexp(1),
-
-      # Overall impression is related to everything
-      Overall_s ~ dnorm(nu, tau),
-      nu <- a_o + b_p_o * Prereq_s + b_l_o * LearningOut_s + b_s_o * Structure_s + b_t_o * Teaching_s + b_li_o * Literature_s + b_a_o * Assessment_s + b_ad_o * Admin_s +  b_e_o[Equality_bin],
-      a_o ~ dnorm(0, 1),
-      b_p_o ~ dnorm(0, 1),
-      b_l_o ~ dnorm(0, 1),
-      b_s_o ~ dnorm(0, 1),
-      b_t_o ~ dnorm(0, 1),
-      b_li_o ~ dnorm(0, 1),
-      b_a_o ~ dnorm(0, 1),
-      b_ad_o ~ dnorm(0, 1),
-      b_e_o[Equality_bin] ~ dnorm(0, 1),
-      tau ~ dexp(1)
-      ), data = dlist, chains = 2, cores = 2
-
-)
-```
-```{r}
-model_mequality_new <- ulam(log_lik=TRUE,
-      alist(
-      Equality_s ~ dnorm(mu, sigma),
-      mu <- a_0 + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_w * Workload_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s,
-      a_0 ~ dnorm(0, 1),
-      b_p ~ dnorm(0, 1),
-      b_l ~ dnorm(0, 1),
-      b_s ~ dnorm(0, 1),
-      b_t ~ dnorm(0, 1),
-      b_w ~ dnorm(0, 1),
-      b_li ~ dnorm(0, 1),
-      b_a ~ dnorm(0, 1),
-      b_ad ~ dnorm(0, 1),
-      sigma ~ dexp(1)
-      ), data = dlist, chains = 2, cores = 2
-)
-```
-
-```{r}
-model_mrq1a <- ulam(log_lik=TRUE,
-      alist(
-      Workload_s ~ dnorm(mu, sigma),
-      mu <- a_0 + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_e[Equality_bin],
-      a_0 ~ dnorm(0, 1),
-      b_p ~ dnorm(0, 1),
-      b_l ~ dnorm(0, 1),
-      b_s ~ dnorm(0, 1),
-      b_t ~ dnorm(0, 1),
-      b_li ~ dnorm(0, 1),
-      b_a ~ dnorm(0, 1),
-      b_ad ~ dnorm(0, 1),
-      b_e[Equality_bin] ~ dnorm(0, 1),
+      b_e ~ dnorm(0, 1),
       sigma ~ dexp(1)
       ), data = dlist, chains = 2, cores = 2
 
@@ -171,7 +116,7 @@ model_mrq1a <- ulam(log_lik=TRUE,
 model_mtot <- ulam(log_lik=TRUE,
       alist(
       Overall_s ~ dnorm(mu, sigma),
-      mu <- a_0 + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_e * Equality_s + b_w * Workload_s,
+      mu <- a[Swedish] + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_e * Equality_s + b_w * Workload_s,
       Workload_s ~ dnorm(nu_w, tau_w),
       nu_w <- a_w + b_w_p * Prereq_s + b_w_s * Structure_s + b_w_t * Teaching_s + b_w_l * LearningOut_s,
       LearningOut_s ~ dnorm(nu_l, tau_l),
@@ -182,7 +127,7 @@ model_mtot <- ulam(log_lik=TRUE,
       nu_a <- a_a + b_a_t * Teaching_s,
       Teaching_s ~ dnorm(nu_t, tau_t),
       nu_t <- a_t + b_t_l * Literature_s,
-      a_0 ~ dnorm(0, 1),
+      a[Swedish] ~ dnorm(0, 1),
       a_w ~ dnorm(0, 1),
       a_l ~ dnorm(0, 1),
       a_e ~ dnorm(0, 1),
@@ -212,27 +157,29 @@ model_mtot <- ulam(log_lik=TRUE,
       tau_e ~ dexp(1),
       tau_a ~ dexp(1),
       tau_t ~ dexp(1)
-      ), data = dlist, chains = 4, cores = 4
+      ), data = dlist, chains = 2, cores = 2
 
 )
 ```
 ## Saving the models so we do not have to re-run them all the time.
 ```{r}
-precis(model_mrq1a, prob=0.9, digits = 3)
-precis(model_mrq1b, prob=0.9, digits = 3)
+precis(model_m1, prob=0.9, digits = 3)
+precis(model_mequality_new, prob=0.9, digits = 3)
+precis(model_mwork, prob=0.9, digits = 3)
+precis(model_mteach, prob=0.9, digits = 3)
+precis(model_mtot, prob = 0.9, digits = 3)
 
-compare(model_mrq1a, model_mrq1b)
 
-save(model_m1, model_m1_eq, model_mrq1a, model_mrq1b, model_mtot, file = "./data/model_real_out.RData")
+save(model_m1, model_mequality_new, model_mwork, model_mteach, model_mtot, file = "./data/model_real_out.RData")
 
 ## Exporting the data from the models for plotting in seaborn
 data_m1 <- extract.samples(model_m1)
-data_m1_eq <- extract.samples(model_m1_eq)
-data_mrq1a <- extract.samples(model_mrq1a)
-data_mrq1b <- extract.samples(model_mrq1b)
+data_mequality_new <- extract.samples(model_mequality_new)
+data_mwork <- extract.samples(model_mwork)
+data_mteach <- extract.samples(model_mteach)
 data_mtot <- extract.samples(model_mtot)
 
-save(data_m1, data_m1_eq, data_mrq1a, data_mrq1b, data_mtot, file = "./data/modeldata_real_out.RData")
+save(data_m1, data_mequality_new, data_mwork, data_mteach, data_mtot, file = "./data/modeldata_real_out.RData")
 ```
 
 
@@ -240,8 +187,4 @@ save(data_m1, data_m1_eq, data_mrq1a, data_mrq1b, data_mtot, file = "./data/mode
 load("./data/model_real_out.RData")
 load("./data/modeldata_real_out.RData")
 
-data_mequality_new <- extract.samples(model_mequality_new)
-
-save(model_mequality_new, model_m1, model_m1_eq, model_mrq1a, model_mrq1b, file = "./data/model_real_out.RData")
-save(data_mequality_new, data_m1, data_m1_eq, data_mrq1a, data_mrq1b, file = "./data/modeldata_real_out.RData")
 ```
